--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    -name : docker login
+     env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
+    run: docker login -u $DOCKER_USER -p $DOCKER_PASS
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v2.4.1
     
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag mymainjs
+      
+    - name: docker push
+      run : docker push mymainjs
