--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,9 @@ jobs:
     
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag mymainjs
+      run: docker build . --file Dockerfile --tag mymainjs:latest
+
       
     - name: docker push
-      run : docker push mymainjs
+      run : docker push mymainjs:latest
+
