--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,9 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mymainjs:latest
 
+    - name: docker tag
+      run : docker tag mainjs:latest andrewlimyh/mainjs:latest
       
     - name: docker push
-      run : docker push mymainjs:latest
+      run : docker push andrewlimyh/mainjs:latest
 
