--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
     
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag mainjs
+      run: docker build -t mainjs .
 
       
     - name: docker push
