--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,9 +28,9 @@ jobs:
     
     
     - name: Build the Docker image
-      run: docker build -t mainjs .
+      run: docker build -t andrewlimyh/mainjs:latest .
 
       
     - name: docker push
-      run : docker push andrewlimyh/mainjs
+      run : docker push andrewlimyh/mainjs:latest
 
